@@ -98,12 +98,6 @@ DestMem_RelocUpdater (const char *fileName, unsigned lineNum, ARMWord offset,
 	      else if (valueP->Data.Code.len == 1
 	               && CPUMem_ConstantInMOVW (valP->Data.Int.i))
 		newIR |= 0x03000000 | ((valP->Data.Int.i & 0xF000) << 4) | (valP->Data.Int.i & 0x0FFF); /* Optimize to MOVW.  */
-	      else if (valueP->Data.Code.len == 1
-	               && CPUMem_ConstantInMOVT (valP->Data.Int.i))
-		{
-		  uint32_t valToEncode = valP->Data.Int.i >> 16; 
-		  newIR |= 0x03400000 | ((valToEncode & 0xF000) << 4) | (valToEncode & 0x0FFF); /* Optimize to MOVT.  */
-		}
 	      else if ((areaCurrentSymbol->area.info->type & AREA_ABS) != 0)
 		{
 		  ARMWord newOffset = valP->Data.Int.i - (Area_GetBaseAddress (areaCurrentSymbol) + offset + 8);
@@ -814,8 +808,9 @@ m_ldm (bool doLowerCase)
 
 
 /**
- * Implements POP, i.e. LDM<cond>FD sp!, {...}
- * (= LDM<cond>IA sp!, {...})
+ * Implements POP, i.e. LDM<cond>FD sp!, {...} (= LDM<cond>IA sp!, {...})
+ * when more than one register is to be popped from the stack, or
+ * LDR Rx, [sp, #4]! when one register is to be popped from the stack.
  * UAL syntax.
  */
 bool
@@ -844,8 +839,9 @@ m_stm (bool doLowerCase)
 
 
 /**
- * Implements PUSH, i.e. STM<cond>FD sp!, {...}
- * (= STM<cond>DB sp!, {...})
+ * Implements PUSH, i.e. STM<cond>FD sp!, {...} (= STM<cond>DB sp!, {...})
+ * when more than one register is to be pushed on the stack, or
+ * STR Rx, [sp], #-4 when one register is to be pushed on the stack.
  * UAL syntax.
  */
 bool
@@ -1128,14 +1124,4 @@ bool
 CPUMem_ConstantInMOVW (uint32_t constant)
 {
   return Target_GetArch () >= ARCH_ARMv6T2 && (constant & 0xFFFF0000U) == 0;
-}
-
-
-/**
- * \return true when ARM MOVW instruction can be used to load given constant.
- */
-bool
-CPUMem_ConstantInMOVT (uint32_t constant)
-{
-  return Target_GetArch () >= ARCH_ARMv6T2 && (constant & 0x0000FFFFU) == 0;
 }
